Testing stacked windows: Added hint-label to login window.

--- a/gpmp/ui/account_login.ui
+++ b/gpmp/ui/account_login.ui
@@ -5,7 +5,23 @@
   <property name="windowTitle">
    <string>Log in to Google Music</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;In order to use Google Music you have to specify your Google account's email address and password.&lt;br/&gt;You only need to do this once.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections/>
