Email/password controls for login window.

--- a/gpmp/ui/account_login.ui
+++ b/gpmp/ui/account_login.ui
@@ -8,7 +8,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="lbl_info">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;In order to use Google Music you have to specify your Google account's email address and password.&lt;br/&gt;You only need to do this once.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
@@ -17,6 +17,41 @@
       </property>
       <property name="wordWrap">
        <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="edt_email"/>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="lbl_email">
+        <property name="text">
+         <string>Email</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="lbl_password">
+        <property name="text">
+         <string>Password</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="edt_password">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="QPushButton" name="btn_login">
+      <property name="text">
+       <string>Log in</string>
       </property>
      </widget>
     </item>
