--- a/gpmp/ui/playlists.ui
+++ b/gpmp/ui/playlists.ui
@@ -6,43 +6,9 @@
    <string>Playlists</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_4">
+   <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTabWidget" name="tbw_playlists">
-      <property name="currentIndex">
-       <number>0</number>
-      </property>
-      <widget class="QWidget" name="tab_auto">
-       <attribute name="title">
-        <string>Auto playlists</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QListWidget" name="lst_auto"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="tab_instant">
-       <attribute name="title">
-        <string>Instant mixes</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QListWidget" name="lst_instant"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="tab_custom">
-       <attribute name="title">
-        <string>Custom playlists</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
-        <item>
-         <widget class="QListWidget" name="lst_custom"/>
-        </item>
-       </layout>
-      </widget>
-     </widget>
+     <widget class="QListWidget" name="lst_lists"/>
     </item>
    </layout>
   </widget>
