--- a/gpmp/ui/main_menu.ui
+++ b/gpmp/ui/main_menu.ui
@@ -36,7 +36,7 @@
     <item>
      <widget class="QPushButton" name="btn_now">
       <property name="text">
-       <string>Playing now</string>
+       <string>Now playing</string>
       </property>
      </widget>
     </item>
